alignment fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,15 +70,8 @@ html {
     }
   }
 }
-
-.footerBackground {
+  .footerBackground {
   background:#26374a url(../public/landscape.png) no-repeat right bottom;
-}
-
-.circlePosition {
-  position: Relative ;
-left: -12%;
-
 }
 
 
